Fixed Navbar and improved mobile site
Fixed issue with navbar getting too big at certain site resolutions.  Menu now compacts and expands properly on small screen resolutions.

--- a/style.css
+++ b/style.css
@@ -6,6 +6,183 @@ https://codepen.io/tutsplus/pen/bGVPVrY
 
 /* Start of navbar code */
 /* Basic styling */
+/** {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+body {
+  font-family: sans-serif;
+  font-size: 16px;
+}
+nav {
+
+  padding: 0 15px;
+}
+a {
+  color: black;
+  text-decoration: none;
+}
+.menu,
+.submenu {
+  list-style-type: none;
+}
+.logo {
+  font-size: 20px;
+  padding: 7.5px 10px 7.5px 0;
+}
+.item {
+  padding: 10px;
+}
+.item.button {
+  padding: 9px 5px;
+}
+.item:not(.button) a:hover,
+.item a:hover::after {
+  color: #ccc;
+}
+
+
+
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu li img {
+  display: block;
+  margin: auto;
+}
+.menu li.subitem a {
+  padding: 15px;
+}
+.toggle {
+  order: 1;
+  font-size: 20px;
+}
+.item.button {
+  order: 2;
+}
+.item {
+  order: 3;
+  width: 100%;
+  text-align: center;
+  display: none;
+}
+.active .item {
+  display: block;
+}
+.button.secondary {
+
+  border-bottom: 1px #444 solid;
+}
+
+.submenu {
+  display: none;
+}
+.submenu-active .submenu {
+  display: block;
+}
+.has-submenu i {
+  font-size: 12px;
+}
+.has-submenu > a::after {
+  font-family: "Font Awesome 5 Free";
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 900;
+  content: "\f078";
+  color: white;
+  padding-left: 5px;
+}
+.subitem a {
+  padding: 10px 15px;
+}
+.submenu-active {
+  background-color: #111;
+  border-radius: 3px;
+}
+
+
+@media all and (min-width: 700px) {
+  .logo {
+    flex: 0;
+  }
+  .item.button {
+    width: auto;
+    order: 1;
+    display: block;
+  }
+  .toggle {
+    flex: 1;
+    text-align: right;
+    order: 2;
+  }
+
+  .menu li.button a {
+    padding: 10px 15px;
+    margin: 5px 0;
+  }
+  .button a {
+    background: #0080ff;
+    border: 1px royalblue solid;
+  }
+  .button.secondary {
+    border: 0;
+  }
+  .button.secondary a {
+    background: transparent;
+    border: 1px #0080ff solid;
+  }
+  .button a:hover {
+    text-decoration: none;
+  }
+  .button:not(.secondary) a:hover {
+    background: royalblue;
+    border-color: darkblue;
+  }
+}
+@media all and (min-width: 960px) {
+  .menu {
+    align-items: flex-start;
+    flex-wrap: nowrap;
+    background: none;
+  }
+  .logo {
+    order: 0;
+  }
+  .item {
+    order: 1;
+    position: relative;
+    display: block;
+    width: auto;
+  }
+  .button {
+    order: 2;
+  }
+  .submenu-active .submenu {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 68px;
+    background: #111;
+  }
+  .toggle {
+    display: none;
+  }
+  .submenu-active {
+    border-radius: 0;
+  }
+  .menu li a {
+    display: block;
+    padding: 50%;
+  }
+}
+*/
+/* End of navbar code */
+/* Basic styling */
 * {
   box-sizing: border-box;
   padding: 0;
@@ -16,7 +193,6 @@ body {
   font-size: 16px;
 }
 nav {
-/*	background: #ccc;*/
   padding: 0 15px;
 }
 a {
@@ -50,7 +226,7 @@ a {
 }
 .menu li a {
   display: block;
-  padding: 60% 5px;
+  padding: 10px 5px;
 }
 .menu li.subitem a {
   padding: 15px;
@@ -104,20 +280,23 @@ a {
 
 /* Tablet menu */
 @media all and (min-width: 700px) {
-  .logo {
-    flex: 0;
+  .menu {
+    justify-content: center;
   }
-/*  .item.button {
+  .logo {
+    flex: 1;
+  }
+  .item.button {
     width: auto;
     order: 1;
     display: block;
-  }*/
+  }
   .toggle {
     flex: 1;
     text-align: right;
     order: 2;
   }
-
+  /* Button up from tablet screen */
   .menu li.button a {
     padding: 10px 15px;
     margin: 5px 0;
@@ -139,7 +318,7 @@ a {
   .button:not(.secondary) a:hover {
     background: royalblue;
     border-color: darkblue;
-  }*/
+  }
 }
 /* Desktop menu */
 @media all and (min-width: 960px) {
@@ -173,9 +352,11 @@ a {
   .submenu-active {
     border-radius: 0;
   }
+  .menu li a {
+    display: block;
+    padding: 35px 5px;
+  }
 }
-
-/* End of navbar code */
 
 .container {
 	display: flex;
